--- a/translations/en/en.json
+++ b/translations/en/en.json
@@ -559,7 +559,7 @@
     ,"virtAsstTitleCurrentBasal":"Current Basal"
     ,"virtAsstTitleCurrentCOB":"Current COB"
     ,"virtAsstTitleCurrentIOB":"Current IOB"
-    ,"virtAsstTitleLaunch":"Welcome to Nightscout"
+    ,"virtAsstTitleLaunch":"Welcome to My Spark"
     ,"virtAsstTitleLoopForecast":"Loop Forecast"
     ,"virtAsstTitleLastLoop":"Last Loop"
     ,"virtAsstTitleOpenAPSForecast":"OpenAPS Forecast"
